# planarally-dice

./: .eslintrc.js  .gitignore  .oxlintrc.json  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: pr.yaml
examples/basic/: environment.ts  index.ts  package-lock.json  package.json
examples/meshes/: README.md
examples/webpack/: README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
examples/webpack/src/: index.ts
render/: Cargo.toml  README.md
render/assets/: Dice20variant.gltf
render/src/: lib.rs  main.rs
src/: diceThrower.ts  index.ts  parser.ts  types.ts  utils.ts
src/3d/: dice-thrower.ts  diceThrower.ts  index.ts  options.ts
src/core/: index.ts  roll.ts  systems.ts  types.ts
src/parser/: DndParser.ts  Parser.ts  index.ts  types.ts
src/shims/: ammo.d.ts
src/systems/: index.ts
src/systems/dx/: 3d.ts  index.ts  types.ts
src/utils/: ammo.ts  geom.ts  math.ts  uuid.ts
